--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "fbemitter": "^3.0.0",
-    "p2p-client-js": "../p2p-client/p2p-client-js/",
+    "p2p-client-js": "../p2p-server/p2p-client-js/",
     "promise.allsettled": "^1.0.4",
     "react": "17.0.1",
     "react-native": "0.64.2",
@@ -24,8 +24,10 @@
     "react-native-gifted-chat": "^0.16.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-rename": "^2.9.0",
+    "react-native-rsa-native": "^2.0.3",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-sqlite-storage": "^5.0.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-webrtc": "^1.89.3",
     "unorm": "^1.6.0",
